welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:11: error: not found: value getCouleursol
	getCouleursol()
        ^Array1:14: error: value droite is not a member of Unit
for (j <- 0 to h-1) {gauche();avance()droite();avance()
                                      ^