welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
def marquerSol(c:Color)={
	setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
}
var h = getMondeHauteur()
var T = new Array[Color](h)
for (i<- 0 to h-1){
	getCouleursol()
	avance()
}
for (j <- 0 to h-1) {gauche();avance()droite();avance()
			for(k<- 0 to h-1)
			{avance()
			marquerSol(T(k))}
}}
